; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_main.c_p54_reset_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_main.c_p54_reset_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p54_common = type { i32, %struct.TYPE_2__, %struct.survey_info*, %struct.ieee80211_channel* }
%struct.TYPE_2__ = type { i64, i64, i64 }
%struct.survey_info = type { i64, i64, i64 }
%struct.ieee80211_channel = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.p54_common*)* @p54_reset_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @p54_reset_stats(%struct.p54_common* %0) #0 {
  %2 = alloca %struct.p54_common*, align 8
  %3 = alloca %struct.ieee80211_channel*, align 8
  %4 = alloca %struct.survey_info*, align 8
  store %struct.p54_common* %0, %struct.p54_common** %2, align 8
  %5 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %6 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %5, i32 0, i32 3
  %7 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %6, align 8
  store %struct.ieee80211_channel* %7, %struct.ieee80211_channel** %3, align 8
  %8 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %3, align 8
  %9 = icmp ne %struct.ieee80211_channel* %8, null
  br i1 %9, label %10, label %24

10:                                               ; preds = %1
  %11 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %12 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %11, i32 0, i32 2
  %13 = load %struct.survey_info*, %struct.survey_info** %12, align 8
  %14 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %3, align 8
  %15 = getelementptr inbounds %struct.ieee80211_channel, %struct.ieee80211_channel* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds %struct.survey_info, %struct.survey_info* %13, i64 %16
  store %struct.survey_info* %17, %struct.survey_info** %4, align 8
  %18 = load %struct.survey_info*, %struct.survey_info** %4, align 8
  %19 = getelementptr inbounds %struct.survey_info, %struct.survey_info* %18, i32 0, i32 2
  store i64 0, i64* %19, align 8
  %20 = load %struct.survey_info*, %struct.survey_info** %4, align 8
  %21 = getelementptr inbounds %struct.survey_info, %struct.survey_info* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.survey_info*, %struct.survey_info** %4, align 8
  %23 = getelementptr inbounds %struct.survey_info, %struct.survey_info* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  br label %24

24:                                               ; preds = %10, %1
  %25 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %26 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %25, i32 0, i32 0
  store i32 1, i32* %26, align 8
  %27 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %28 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 2
  store i64 0, i64* %29, align 8
  %30 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %31 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  store i64 0, i64* %32, align 8
  %33 = load %struct.p54_common*, %struct.p54_common** %2, align 8
  %34 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store i64 0, i64* %35, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
